logs/pyvscp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Naked'...
Listing './lib/python3.5/site-packages/Naked/commands'...
Listing './lib/python3.5/site-packages/Naked/templates'...
Listing './lib/python3.5/site-packages/Naked/toolshed'...
Listing './lib/python3.5/site-packages/Naked/toolshed/c'...
Listing './lib/python3.5/site-packages/Naked-0.1.31.dist-info'...
Listing './lib/python3.5/site-packages/PyCRC'...
Listing './lib/python3.5/site-packages/PyCRC-1.21.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/crypto'...
Listing './lib/python3.5/site-packages/crypto/library'...
Listing './lib/python3.5/site-packages/crypto-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvscp-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/sample'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shellescape'...
Listing './lib/python3.5/site-packages/shellescape-3.4.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vscp'...
Compiling './lib/python3.5/site-packages/vscp/testguid.py'...
***   File "./lib/python3.5/site-packages/vscp/testguid.py", line 10
    print "After creation:", gg.getAsString()
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vscp/testudp.py'...
***   File "./lib/python3.5/site-packages/vscp/testudp.py", line 13
    print type(e), type(ex)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vscp/testvscphelper.py'...
***   File "./lib/python3.5/site-packages/vscp/testvscphelper.py", line 32
    print "------------------------------------------------------------------------"
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vscp/udp.py'...
***   File "./lib/python3.5/site-packages/vscp/udp.py", line 141
    print "No encryption is used."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vscp/vscp.py'...
***   File "./lib/python3.5/site-packages/vscp/vscp.py", line 134
    print "------------------------------------------------------------------------"
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaml'...
Listing './my_data'...
Listing './share'...
Listing './share/python-wheels'...
